<resources>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="app_name">Propty</string>
    <string name="error_email_not_found">Your email does not exist in our database.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_user_pw">Incorrect username/password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_old_pw">Invalid old Password.</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_network_connection">Error in Network Connection</string>
    <string name="error_pw_change">Error occurred in changing Password.</string>
    <string name="error_register">Error occurred in registration</string>
    <string name="error_user_exists">This user already exists</string>
    <string name="facebook_app_id">584137101735830</string>
    <string name="facebook_login_cancel">Login attempt canceled.</string>
    <string name="facebook_login_error">Login attempt failed.</string>
    <string name="facebook_login_success">Login attempt successful!\nUser ID: %1$s\nAuth Token: %2$s</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="pw_change_success">Your Password is successfully changed.</string>
    <string name="recovery_email">A recovery email has been sent to you, please see it for more details.</string>
    <string name="register_success">Successfully Registered</string>
    <string name="welcome_text">Welcome, %1$s</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="app_name">Google Cloud Messaging</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">GcmLoginActivity</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="action_logout">Logout</string>
    <!-- Google Maps API Key -->
    <string name="google_maps_key">AIzaSyBlTIcWcWnDcAewqmpTF68fYOMIpweG4nQ</string>

    <!-- Strings related to Settings -->
    <string-array name="squareFootage_array">
        <item>> 1,000 sq. ft</item>
        <item>> 5,000 sq. ft</item>
        <item>> 10,000 sq. ft</item>
        <item>>20,000 sq. ft</item>
        <item>> 50,000 sq. ft</item>
        <item>> 100,000 sq. ft</item>
    </string-array>
    <string-array name="structure_array">
        <item>House</item>
        <item>Apartment</item>
        <item>Condo</item>
        <item>Commercial</item>
        <item>Other</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Example Update Preferences Setting-->
    <string name="action_update">Quick Update</string>
    <string name="message">Hit the Gear icon to open the drawer!!!</string>
    <string name="sq_feet_text">Size(square feet)</string>
    <string name="type_home">Type of Home</string>
    <string name="update_button">Update</string>
    <string name="drawer_name">Update Search Preferences</string>
    <string name="min_price">Minimum Price</string>
    <string name="max_price">Maximum Price</string>
    <string name="num_bedroom">Bedrooms:</string>
    <string name="num_bathroom">Bathrooms:</string>
    <string name="within_text">Within </string>
    <string name="miles_hint">      </string>
    <string name="miles_of"> miles of </string>
    <string name="current_location">Current location</string>
    <string name="other_location">Other zip code: </string>
    <string name="zip_hint">      </string>
    <string-array name="home_array">
        <item>House</item>
        <item>Condo</item>
        <item>Apartment</item>
        <item>Duplex</item>
    </string-array>
    <string-array name="sq_ft_array">
        <item>0-1000</item>
        <item>1001-1500</item>
        <item>1501-2000</item>
        <item>2001-2500</item>
        <item>2500-3000</item>
        <item>3001+</item>
    </string-array>
    <!-- Strings for realtor names -->
    <string-array name="realtors">
        <item>Frank Drebin</item>
        <item>Bob Loblaw</item>
        <item>Andi Garcia</item>
        <item>Keyser Soze</item>
    </string-array>

    <!-- Strings for realtor info/description -->
    <string-array name="realtor_info">
        <item>Hey, It\'s Enrico Palazzo!</item>
        <item>You don\'t need double-talk. You need Bob Loblaw.</item>
        <item>That was my bad.</item>
        <item>And like that...he\'s gone.</item>
    </string-array>

    <!-- Strings for realtor ratings in rating bars -->
    <string-array name="realtor_ratings">
        <item>4.5</item>
        <item>3.75</item>
        <item>2.5</item>
        <item>3.0</item>
    </string-array>

    <!-- Strings for RealtorList Button and "picked realtor" TextView -->
    <string name="picked_realtor">No realtor selected</string>
    <string name="realtor_button">Pick This Realtor</string>
    <string name="realtor_info">Realtor Info Here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>