<?xml version="1.0" encoding="utf-8"?>
<!-- Entire Layout for update preferences drawer in Property Main activity -->
<!-- TODO: Change theme strictly for this drawer. Had issues creating a new theme -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:padding="0dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="#607D8B"
        />

    <!-- Layout for title -->
<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="26dp"
        android:layout_marginStart="16dp"
        android:layout_weight=".10"

        >-->


        <TextView
            android:id="@+id/update_text"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/drawer_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            />

    <!--</LinearLayout>-->

    <!-- Layout for price sliders -->
    <LinearLayout
        android:id="@+id/slider_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"

        android:orientation="vertical"
        android:layout_weight="0.25"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            >

            <TextView
                android:id="@+id/min_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_price"
                />

            <SeekBar
                android:id="@+id/min_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"


                />

            <TextView
                android:id="@+id/max_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_price"
                />

            <SeekBar
                android:id="@+id/max_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"

                />
        </LinearLayout>

    </LinearLayout>

    <!-- Layout for number pickers -->
    <LinearLayout
        android:id="@+id/picker_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginStart="16dp"

        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/num_bedroom"
            android:id="@+id/text_bedroom"
            android:layout_gravity="center_vertical"

            />

        <NumberPicker
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:id="@+id/num_bedroom"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"

            />

        <TextView
            android:id="@+id/text_bathroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/num_bathroom"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"

            />

        <NumberPicker
            android:id="@+id/num_bathroom"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"

            >


        </NumberPicker>

    </LinearLayout>

    <!-- Layout for dropdown menus -->
    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="20dp"
        android:layout_marginStart="16dp"

        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/type_spinner_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/type_home"
                />

            <Spinner
                android:id="@+id/type_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                >

            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/size_spinner_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_marginStart="16dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/sq_feet_text"
                />

            <Spinner
                android:id="@+id/sq_ft_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Spinner>


        </LinearLayout>

    </LinearLayout>

    <!-- Layout for radio buttons and edittexts of "within miles" -->
    <LinearLayout
        android:id="@+id/miles_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".30"
        android:orientation="vertical"
        android:layout_marginStart="16dp"

        >

        <LinearLayout
            android:id="@+id/edit_miles_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/text_within"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/within_text"
                />

            <EditText
                android:id="@+id/edit_miles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="3"
                android:maxLength="4"

                />

            <TextView
                android:id="@+id/text_miles_of"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/miles_of"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"

            >

            <RadioButton
                android:id="@+id/current_zip_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/other_zip_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


                <EditText
                    android:id="@+id/edit_zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6"
                    android:hint="@string/zip_hint"

                    />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <!-- Layout for Update button -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"

        >

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/update_button"
            />

    </RelativeLayout>


</LinearLayout>